--- a/client/views/partials/admin/customers/factoryOwners.html
+++ b/client/views/partials/admin/customers/factoryOwners.html
@@ -24,11 +24,14 @@
     <div class="table-res">
         <table class="table table-bordered table-striped table-condensed table-hover" ng-table="factoryOwnerParams">
             <tr ng-repeat="factoryOwner in currentPageOfFactoryOwners" style="text-align: center;">
-                <td data-title="'S.No'">
+                <!--<td data-title="'S.No'">
                     {{$index+1}}
                 </td>
                 <td data-title="'ID'" sortable="'userId'" class="clickable-item">
-                    {{factoryOwner.userId || '--'}}
+                    {{factoryOwner.userId || '&#45;&#45;'}}
+                </td>-->
+                <td data-title="'User Name'" sortable="'userId'" class="clickable-item">
+                    {{factoryOwner.userName}}
                 </td>
                 <td data-title="'Customer Name'" sortable="'firstName'" class="clickable-item">
                     {{factoryOwner.firstName || '--'}}
