--- a/client/views/partials/admin/orderProcess/editTruckRequest.html
+++ b/client/views/partials/admin/orderProcess/editTruckRequest.html
@@ -256,7 +256,7 @@
                                            class="'form-control order-form-control'"></admin-date-picker>
                     </div>
                     <div class="form-group styling-input-list col-sm-4">
-                        <input type="text" class="form-control order-form-control" ng-model="loadBooking.driverId"/>
+                        <input type="text" class="form-control order-form-control" ng-model="loadBooking.driverMobile"/>
                         <!-- <select class="form-control order-form-control" ng-model="loadBooking.driverId">
                              <option value="">Select Driver</option>
                              <option ng-repeat="driver in loadBooking.driversList" value="{{driver._id}}">
@@ -267,17 +267,17 @@
                     </div>
                     <div class="form-group styling-input-list col-sm-4">
                         <input type="text" class="form-control order-form-control"
-                               ng-model="loadBooking.freightAmount"/>
+                               ng-model="loadBooking.to_bookedAmount"/>
                         <label class="order-effect-for-input" style="padding-left: 20px;">Amount*</label>
                     </div>
                     <div class="form-group styling-input-list col-sm-4">
                         <input type="number" class="form-control order-form-control" name="loadingCharges"
-                               ng-model="truck.loadingCharges"/>
+                               ng-model="loadBooking.to_loadingCharge"/>
                         <label class="order-effect-for-input" style="padding-left: 20px;">Loading Charges*</label>
                     </div>
                     <div class="form-group styling-input-list col-sm-4">
                         <input type="number" class="form-control order-form-control" name="unloadingCharges"
-                               ng-model="truck.unloadingCharges"/>
+                               ng-model="loadBooking.to_unloadingCharge"/>
                         <label class="order-effect-for-input" style="padding-left: 20px;">Unloading Charges*</label>
                     </div>
                 </div>
