--- a/client/views/partials/admin/services/erpAccounts.html
+++ b/client/views/partials/admin/services/erpAccounts.html
@@ -29,20 +29,23 @@
     </ul>
     <table class="table table-bordered table-striped table-condensed table-hover ng-table-responsive" ng-table="accountParams">
         <tr ng-repeat="account in currentPageOfAccounts" style="text-align: center;">
-            <td data-title="'S No'">
+            <!--<td data-title="'S No'">
                 {{$index+1}}
-            </td>
+            </td>-->
             <td data-title="'Customer Name'" sortable="'contactName'" class="clickable-item">
                 {{account.contactName}}
             </td>
-            <td data-title="'type'" sortable="'type'" class="clickable-item">
+           <!-- <td data-title="'type'" sortable="'type'" class="clickable-item">
                 {{account.type}}
-            </td>
+            </td>-->
             <td data-title="'mobile'" sortable="'contactPhone'" class="clickable-item">
                 {{account.contactPhone}}
             </td>
             <td data-title="'Reg Date'" sortable="'createdAt'" class="clickable-item">
                 {{account.createdAt | date:'yyyy-MM-dd'}}
+            </td>
+            <td data-title="'No of trucks'"  class="clickable-item">
+                {{account.noOfTrucks}}
             </td>
             <td data-title="'Sold By'" sortable="'createdBy.userName'" class="clickable-item">
                 {{account.createdBy.userName | date:'yyyy-MM-dd'}}
