--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -2,62 +2,59 @@
     <div class="col-xs-12">
         <div class="lisk-block col-xs-12">
             <div class="col-xs-12">
-                <ul>
-                    <li class="report"><h2>Reports</h2></li>
-                    <li >
-                        <div class="form-details">
-                            <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="reportParams.startDate"></date-picker>
-                        </div>
-                    </li>
+                <div class="col-sm-1 pall-zero"><h3 class="gpsTitle">Reports</h3></div>
+                <div class="col-sm-2 pall-zero">
+                    <div class="form-details ">
+                        <date-picker class="'textfield br-one'" ban-future="'banFutureDate'"
+                                     ng-model="reportParams.startDate" placeholder="'From Date'"></date-picker>
+                    </div>
+                </div>
+                <div class="col-sm-2 pall-zero">
+                    <div class="form-details">
+                        <date-picker class="'textfield'" ban-future="'banFutureDate'"
+                                     ng-model="reportParams.endDate"></date-picker>
+                    </div>
+                </div>
 
-                    <li>
-                        <div class="form-details">
-                            <date-picker class="'textfield br-one'" ban-future="'banFutureDate'" ng-model="reportParams.endDate"></date-picker>
-                        </div>
-                    </li>
+                <div class="col-sm-3 pall-zero gpsSearchMain">
+                    <div class="gpsSearch">
+                        <ui-select ng-model="reportParams.truckNo" theme="select2"
+                                   style="min-width: 95%;"
+                                   title="Search by truck no" reset-search-input="false">
 
-                    <li class="go-sub">
-                        <!--<button type="button" class="btn go">Go</button>-->
-                    </li>
+                            <ui-select-match placeholder="Search by truck no" class="form-control order-form-control">
+                                {{$select.selected.registrationNo}}
+                            </ui-select-match>
+                            <ui-select-choices
+                                    repeat="truck in trucks " refresh="getAllTrucksForAccount($select.search)"
+                                    refresh-delay="0" scroll-detector="loadMore()">
 
-                    <li class="sea-wid">
-                        <div class="search-box reports-search">
-                            <!--<input type="text" class="form-control textfiled1" placeholder="Search by truck no">-->
+                                <div ng-bind-html="truck.registrationNo"></div>
+                                <small>
+                                    Truck Type: {{truck.truckType || '---'}}
+                                </small>
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="searchBtn" >
+                        <input type="button" ng-click="getTruckReport()" class="sea-btn">
+                    </div>
+                </div>
 
-                            <ui-select ng-model="reportParams.truckNo" theme="select2"
-                                       style="min-width: 95%;"
-                                       title="Search by truck no" reset-search-input="false">
+                <div class="col-sm-4">
+                    <ul class="list-inline">
+                        <li><a href="#" class="map" ui-sref="mapView">Map view</a></li>
+                        <li><a href="#" class="map" ui-sref="listView">List view</a></li>
+                        <li class="">
+                            <a href="#" class="mail">
+                            <img src="images/Reports_Mail.png" width="40" height="28" alt="Reports Mail"></a></li>
 
-                                <ui-select-match placeholder="Search by truck no" class="form-control order-form-control">
-                                    {{$select.selected.registrationNo}}
-                                </ui-select-match>
-                                <ui-select-choices
-                                        repeat="truck in trucks " refresh="getAllTrucksForAccount($select.search)"
-                                        refresh-delay="0" scroll-detector="loadMore()">
+                        <li class=" mar-rgt-space pull-right"><a href="#" class="mail">
+                            <img src="images/Reports_Download.png" width="40" height="28" alt="img"></a></li>
+                    </ul>
+                </div>
 
-                                        <div ng-bind-html="truck.registrationNo"></div>
-                                    <small>
-                                        Truck Type: {{truck.truckType || '---'}}
-                                    </small>
-                                </ui-select-choices>
-                            </ui-select>
-
-                            <div class="pull-right" style="position: absolute; top:1px; right:23px;">
-                                <input type="button" ng-click="getTruckReport()" class="sea-btn">
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                    </li>
-                    <li class="map-wid"><a href="#" class="map" ui-sref="mapView">Map view</a></li>
-                    <li class="map-wid"><a href="#" class="map" ui-sref="listView">List view</a></li>
-
-                    <li class="mail-wid"><a href="#" class="mail">
-                        <img src="images/Reports_Mail.png" width="40" height="28" alt="Reports Mail"></a></li>
-
-                    <li class="mail-wid mar-rgt-space pull-right"><a href="#" class="mail">
-                        <img src="images/Reports_Download.png" width="40" height="28" alt="img"></a></li>
-
-                </ul>
             </div>
             <div class="col-xs-12 mt-25">
                 <a ui-sref="devices" class="btn btn-info pull-right mb-10">Devices</a>
