--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -2,11 +2,11 @@
     <div class="col-xs-12">
         <div class="lisk-block col-xs-12">
             <div class="col-xs-12">
-                <ul>
+                <ul class="list-inline">
 
-                    <li class="vehicle1"><h2>All Vehicles Location</h2></li>
+                    <li class="col-sm-4"><h2>All Vehicles Location</h2></li>
 
-                    <li class="sea-wid1">
+                    <li class="col-sm-4">
                         <div class="search-box1">
                             <input type="text" class="form-control textfiled1" placeholder="search">
                             <input type="button" class="sea-btn">
@@ -14,9 +14,9 @@
                         <div class="clearfix"></div>
                     </li>
 
-                    <li class="map-wid"><a href="#" class="map" ui-sref="mapView">Map view</a></li>
+                    <li><a href="#" class="map" ui-sref="mapView">Map view</a></li>
 
-                    <li class="map-wid"><a href="#" class="map activeView" ui-sref="listView">List view</a></li>
+                    <li><a href="#" class="map activeView" ui-sref="listView">List view</a></li>
 
                     <li  class="mar-rgt-space pull-right map-wid"><a href="#" class="map" ui-sref="gpsReports">Reports</a></li>
 
