changed load request api

--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -25,6 +25,9 @@
 
 <body>
 <div class="main-page" ng-app="easygaadiAdmin" ng-controller="adminNavCtrl" ng-cloak>
+    <div class="loader" ng-show="reqloading">
+        <img src="images/Spinner.svg">
+    </div>
     <div class="container-fluid pall-zero">
         <nav class="navbar custom-navbar navbar-fixed-top">
             <div class="container">
