--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -1,6 +1,6 @@
 <div class="main-right col-xs-12" ng-controller="ExpenseCtrl">
     <div class="col-xs-12 pall-zero mb-10">
-        <div class="col-sm-2 pall-zero"><h3>Expenses:</h3></div>
+        <div class="col-sm-2 pall-zero"><h3>Expenses</h3></div>
        <!-- <div class="col-xs-8 col-xs-push-1 pall-zero">
             <div class="col-sm-8">
                 <form>
@@ -22,7 +22,7 @@
                 </select>
             </div>
         </div>-->
-        <div class="col-sm-10 pall-zero ">
+        <div class="col-sm-9 pall-zero ">
             <ul class="list-inline ">
                 <li class="col-sm-3">
                     <date-picker class="'paymentscontrol'" ban-future="'banFutureDate'" ng-model="fromDate"
@@ -52,6 +52,15 @@
                     </select>
                 </li>
             </ul>
+        </div>
+        <div class="col-sm-1 list-inline mailDownload">
+            <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
+                     class="btn mailImage"><img src="images/Reports_Mail.png">
+            </button>
+        </div>
+        <div>
+            <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                <img src="images/Reports_Download.png"></button>
         </div>
     </div>
     <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
