--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Parties</h3></div>
         <div class="col-xs-8 col-xs-push-1 pall-zero">
-        <div class="col-sm-8">
+        <div class="col-sm-7">
             <form>
             <div class="input-group stylish-input-group">
                 <input type="text"  ng-model="partyName1" class="form-control" placeholder="Search By Party Name">
@@ -14,13 +14,22 @@
             </div>
             </form>
         </div>
-        <div class="col-sm-4 pall-zero pos-relative">
+        <div class="col-sm-3 pall-zero pos-relative">
             <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
             <select class="form-control" ng-model="partyName" ng-change="searchByPartyName(partyName);">
                 <option value="" selected>All Parties</option>
                 <option ng-repeat="parties in partiesList">{{parties.name}}</option>
             </select>
         </div>
+            <div class="col-sm-1 list-inline mailDownload">
+                <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
+                         class="btn mailImage"><img src="images/Reports_Mail.png">
+                </button>
+            </div>
+            <div>
+                <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                    <img src="images/Reports_Download.png"></button>
+            </div>
         </div>
     </div>
 
