--- a/client/views/partials/receipts/receiptReceived.html
+++ b/client/views/partials/receipts/receiptReceived.html
@@ -1,7 +1,7 @@
 <div class="main-right col-xs-12" ng-controller="receiptCtrl" ng-init="getReceiptCount();">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-2 pall-zero"><h3>Receipts</h3></div>
-        <div class="col-sm-10 pall-zero ">
+        <div class="col-sm-9 pall-zero ">
             <ul class="list-inline ">
                 <li class="col-sm-3">
                     <date-picker ng-model="filters.fromDate" class="'paymentscontrol'"
@@ -32,6 +32,16 @@
                 </li>
             </ul>
         </div>
+        <div class="col-sm-1 list-inline mailDownload">
+            <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
+                     class="btn mailImage"><img src="images/Reports_Mail.png">
+            </button>
+        </div>
+        <div>
+            <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                <img src="images/Reports_Download.png"></button>
+        </div>
+
     </div>
     <!--<div class="toolbar-button-div pull-right mb-10">-->
     <!--<button class="btn  btn-blue pull-right" ng-click="goToEditPaymentsPage()">Add Payments</button>-->
