--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -4,7 +4,7 @@
             <div class="col-xs-12 pall-zero mb-10">
                 <div class="col-sm-3 pall-zero"><h3>Trips</h3></div>
                 <div class="col-xs-8 col-xs-push-1 pall-zero">
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <form>
                     <div class="input-group stylish-input-group">
                         <input type="text" class="form-control" ng-model="truckNumber1"  placeholder="Search By Vehicle Number">
@@ -16,7 +16,7 @@
                     </div>
                     </form>
                 </div>
-                <div class="col-sm-4 pall-zero pos-relative">
+                <div class="col-sm-3 pall-zero pos-relative">
                     <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                     <select class="form-control" ng-model="truckNumber" ng-change="searchByVechicleNumber(truckNumber);">
                         <option value="" selected>All Vehicles</option>
@@ -24,6 +24,16 @@
 
                     </select>
                 </div>
+                    <div class="col-sm-1 list-inline mailDownload">
+                        <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
+                                 class="btn mailImage"><img src="images/Reports_Mail.png">
+                        </button>
+                    </div>
+                    <div>
+                        <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                            <img src="images/Reports_Download.png"></button>
+                    </div>
+
                 </div>
             </div>
 
@@ -32,7 +42,7 @@
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="tripParams">
                 <tr ng-repeat="trips in currentPageOfTrips" style="text-align: center;">
                     <td data-title="'Trip Date'" sortable="'date'" class="clickable-item">
-                        {{trips.date | date:'dd-MM-yyyy'}}
+                        {{trips.date | date:'dd-MM-yy'}}
                     </td>
                     <td data-title="'Reg No'" sortable="'truckName'" class="clickable-item">{{
                         trips.attrs.truckName}}
