--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Trucks</h3></div>
         <div class="col-xs-8 col-xs-push-1 pall-zero">
-            <div class="col-sm-8">
+            <div class="col-sm-7">
                 <form>
                     <div class="input-group stylish-input-group">
                         <input type="text" ng-model="truckName1" class="form-control"
@@ -16,12 +16,21 @@
                     </div>
                 </form>
             </div>
-            <div class="col-sm-4 pall-zero pos-relative">
+            <div class="col-sm-3 pall-zero pos-relative">
                 <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                 <select class="form-control" ng-model="truckName2" ng-change="searchByTruckName(truckName2);">
                     <option value="" selected>All Vehicles</option>
                     <option ng-repeat="trucks in trucksList">{{trucks.registrationNo}}</option>
                 </select>
+            </div>
+            <div class="col-sm-1 list-inline mailDownload">
+                <button  style="margin-left:7px" type="button" ng-click="shareDetailsViaEmail()"
+                         class="btn mailImage"><img src="images/Reports_Mail.png">
+                </button>
+            </div>
+            <div>
+                <button type="button" ng-click="downloadDetails();" class="btn mailImage">
+                    <img src="images/Reports_Download.png"></button>
             </div>
         </div>
     </div>
