--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -537,7 +537,7 @@ body {
     color: #333;
 }
 .ng-table th.sortable {
-    font-weight: bold;
++    font-weight: bold;
     font-size: 15px;
     color: #333;
     text-align: center;
