--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -52,11 +52,21 @@
                 </div>
             </div>
             <div class="form-group col-xs-12">
-                <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
-                             class="'custom-form-control'" placeholder="'Fitness Expiry*'"></date-picker>
+                <div class="styling-input-list">
+                   <select class="form-control custom-form-control"  ng-model="truck.VehicleType">
+                       <option value="">Select Vehicle type</option>
+                       <option>Car</option>
+                       <option>Truck</option>
+                       <option>Non-Truck</option>
+                   </select>
+                </div>
             </div>
         </div>
         <div class="col-sm-6 col-xs-12 mt-10">
+            <div class="form-group col-xs-12">
+                <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
+                             class="'custom-form-control'" placeholder="'Fitness Expiry*'"></date-picker>
+            </div>
             <div class="form-group col-xs-12">
                 <date-picker id="permitExpiry" ng-model="truck.permitExpiry"
                            class="'custom-form-control'" placeholder="'Permit Due Expiry Date*'"></date-picker>
